updated epicurve chapter with incidence2 and completed diagram chapter

--- a/new_pages/data_used.qmd
+++ b/new_pages/data_used.qmd
@@ -21,17 +21,21 @@ You can download the offline version of this handbook as an HTML file so that yo
 
 ### Option 1: Use download link {.unnumbered}  
 
-For quick access, **right-click** [this link](https://github.com/appliedepi/epirhandbook_eng/raw/master/offline_long/Epi_R_Handbook_offline.html) **and select "Save link as"**.  
+For quick access, **right-click** [this link](https://github.com/appliedepi/epiRhandbook_eng/raw/master/offline_long/index.en.html) **and select "Save link as"**.  
 
 If on a Mac, use Cmd+click. If on a mobile, press and hold the link and select "Save link". The handbook will download to your device. If a screen with raw HTML code appears, ensure you have followed the above instructions or try Option 2.  
 
 
 
-
 ### Option 2: Use our R package {.unnumbered}  
 
-We offer an R package called **epirhandbook**. It includes a function `download_book()` that downloads the handbook file from our Github repository to your computer.  
+We offer an R package called **epirhandbook**. It includes a function `download_book()` that downloads the handbook file from our Github repository to your computer. If you wish to download the book in a language other than English, you can specify this by specifying the language.
 
+```{eval = F}
+download_book(fr)
+```
+
+Currently we support French (fr), German (de), Spanish (es), Portuguese (pt), Vietnamese (vn), Japanese (jp), Turkish (tr), and Russian (ru).
 
 This package also contains a function `get_data()` that downloads all the example data to your computer.  
 
