All pages compiling

--- a/new_pages/help.qmd
+++ b/new_pages/help.qmd
@@ -3,7 +3,9 @@
 
 This page covers how to get help by posting a Github issue or by posting a reproducible example ("reprex") to an online forum.  
 
-
+```{r, echo = F, warning = F, message = F}
+library(tidyverse)
+```
 
 
 ## Github issues  
