--- a/new_pages/missing_data.qmd
+++ b/new_pages/missing_data.qmd
@@ -560,7 +560,7 @@ You could also do a similar process for replacing categorical data with a specif
 
 ```{r}
 linelist <- linelist %>%
-  mutate(outcome_replace_na_with_death = replace_na(outcome, "Death"))
+  mutate(outcome_replace_na_with_death = replace_na(outcome, 1))
 ```
 
 ### Regression imputation {.unnumbered}
