Initial Quarto page created

--- a/data/quarto/outbreak_report.qmd
+++ b/data/quarto/outbreak_report.qmd
@@ -4,7 +4,7 @@ date: "4/24/2021"
 output: pdf_document
 ---
 
-```{r setup, echo=FALSE}
+```{r setup, echo=FALSE, warning =FALSE, message=F}
 pacman::p_load(rio, here, tidyverse, janitor, incidence2, flextable)
 linelist <- rio::import(here::here("data", "case_linelists", "linelist_cleaned.rds"))
 set_flextable_defaults(fonts_ignore=TRUE)
